--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
       <section>
         <h1>About Me</h1>
 
-        <p>Professional Software Engineer with experience in the general areas of parallel and
-          distributed computing. Specifically, my technical skills focus on parallel programming
-          models and runtime systems (MPI and Partitioned Global Address Space models like
-          OpenSHMEM, Global Arrays, and Coarray Fortran)</p>
-        <p class="view"><a href="https://github.com/naveen-rn/naveen-rn.github.io/blob/master/cv/cv.pdf">View my detailed CV as PDF</a></p>
+        <p>Professional Software Engineer with experience in the general areas of parallel and distributed computing. Specifically, my technical skills focus on parallel programming models and runtime systems (MPI and Partitioned Global Address Space models like OpenSHMEM, Global Arrays, and Coarray Fortran)</p>
+        <p class="view"><a href="https://github.com/naveen-rn/naveen-rn.github.io/raw/master/cv/cv.pdf">View my detailed CV as PDF</a></p>
 
       </section>
       <footer>
